docs : update get users documentation
